--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "portfolio-website",
   "version": "0.1.0",
+  "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "deploy": "vercel --prod"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@formspree/react": "^2.5.1",
     "@react-three/drei": "^9.111.2",
     "@react-three/fiber": "^8.17.5",
-    "@sentry/nextjs": "^8.26.0",
+    "@sentry/nextjs": "^7.105.0",
     "clsx": "^2.1.1",
     "framer-motion": "^11.3.28",
     "lucide-react": "^0.428.0",
@@ -43,6 +45,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8.4.41",
     "tailwindcss": "^3.4.10",
-    "typescript": "^5"
+    "typescript": "^5",
+    "vercel": "^34.0.0"
   }
 }
